--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,35 @@
 version: 2.1
 
+jobs:
+  lint-app:
+    docker:
+      - image: python:3.7.3-stretch
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-env-{{ checksum "requirements.txt" }}
+            - v1-env-
+      - run:
+          name: Install dependencies
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            make install
+            
+      - save_cache:
+          paths:
+            - ./venv
+          key: v1-env-{{ checksum "requirements.txt" }}
 
+      - run:
+          name: run lint
+          command: |
+            . venv/bin/activate
+            make lint
 
+workflows:
+  default:
+     jobs:
+       - lint-app
