--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,27 @@ jobs:
             . venv/bin/activate
             make lint
 
+  build-container:
+    docker:
+      - image: circleci/golang:1.15
+        auth:
+          username: $DOCKER_USER
+          password: $DOCKER_PASS  # context / project UI env-var reference
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 19.03.13
+          docker_layer_caching: false
+      - run: |
+          TAG=0.1.$CIRCLE_BUILD_NUM
+          docker build --tag capstone/capstone-app-green-$CIRCLE_WORKFLOW_ID .
+          echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+          docker tag capstone/capstone-app-green-$CIRCLE_WORKFLOW_ID:latest $DOCKER_USER/capstone-app-green-$CIRCLE_WORKFLOW_ID:latest
+          docker push $DOCKER_USER/capstone-app-green-$CIRCLE_WORKFLOW_ID:latest
+
 workflows:
   default:
      jobs:
        - lint-app
+       - build-container:
+           requires: [lint-app]
