--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,14 @@ jobs:
           node-type: t2.medium
           nodes: 1
 
+  create-or-update-eks-deployment:
+    executor: aws-eks/python3
+    steps:
+      - checkout
+      - aws-eks/update-kubeconfig-with-authenticator:
+          cluster-name: << pipeline.parameters.cluster-name >>
+          install-kubectl: true
+
 workflows:
   default:
      jobs:
