--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
 parameters:
   cluster-name:
     type: string
-    default: "Udacity-Capstone"
+    default: "Udacity-Capstone2"
 
 jobs:
   lint-app:
@@ -96,9 +96,9 @@ workflows:
        #- lint-app
        #- build-container:
        #    requires: [lint-app]
-       #- create-eks-cluster:
-       #    requires: [build-container]
-       #- create-or-update-eks-deployment:
-       #    requires: [create-eks-cluster]
+       - create-eks-cluster:
+           requires: [build-container]
+       - create-or-update-eks-deployment:
+           requires: [create-eks-cluster]
        #- build-container
-       - create-or-update-eks-deployment
+       #- create-or-update-eks-deployment
