--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,8 +96,9 @@ workflows:
        #- lint-app
        #- build-container:
        #    requires: [lint-app]
-       - create-eks-cluster:
-           requires: [build-container]
+       #- create-eks-cluster:
+       #    requires: [build-container]
+       - create-eks-cluster
        - create-or-update-eks-deployment:
            requires: [create-eks-cluster]
        #- build-container
