--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
 parameters:
   cluster-name:
     type: string
-    default: "Udacity-Capstone2"
+    default: "Udacity-Capstone"
 
 jobs:
   lint-app:
