--- a/deploy.yml
+++ b/deploy.yml
@@ -1,15 +1,15 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: capstone-app-green
+  name: gsvcapstone
   labels:
-    app: capstone-app-green
+    app: gsvcapstone
   namespace: default
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: capstone-app-green
+      app: gsvcapstone
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -18,12 +18,12 @@ spec:
   template:
     metadata:
       labels:
-        app: capstone-app-green
+        app: gsvcapstone
     spec:
       containers:
-        - image: andrecamilosr/capstone-app-green
+        - image: andrecamilosr/gsvcapstone
           imagePullPolicy: Always
-          name: capstone-app-green
+          name: gsvcapstone
           ports:
             - containerPort: 80
 
@@ -31,13 +31,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: capstone-app-green
+  name: gsvcapstone
   labels:
-    app: capstone-app-green
+    app: gsvcapstone
 spec:
   type: LoadBalancer
   selector:
-    app: capstone-app-green
+    app: gsvcapstone
   ports:
     - port: 80
       targetPort: 80
